12/18/12 consolidate calls to Line.getYIntercept
# 0.00.43 (71362) Dec 18, 2012
12/18/12 demo fractional y-intercept in test application
12/18/12 fix Line.getYIntercept to handle case where numerator or denominator is zero
12/18/12 factor out duplicated code in for fractional y-intercept in slope-intercept equations
12/18/12 add fractional y-intercept to slope-intercept equations (some duplicated code)
12/18/12 TestEquationNodes: add test case for fractional y-intercept
12/18/12 TestEquationNodes: delete some redundant test cases to make room for testing fractional y-intercept
12/17/12 move algorithm for fractional y-intercept into model
12/17/12 test program for converting y-intercept from decimal to improper fraction
12/17/12 MTE challenges: show the user's guess line (black) when the user's guess is correct
12/17/12 GTL challenges: show the answer line (green) when user's guess is correct
12/17/12 keep the color of "your line" consistently black
12/17/12 change request: put check-mark and "X" icons in upper-right corner of equation boxes
12/17/12 restore game tab
12/17/12 rewrite layout code for point-slope equations so that it adds, rather than deletes, nodes
12/17/12 rewrite layout code for slope-intercept equations so that it adds, rather than deletes, nodes
# 0.00.42 (70534) Nov 20, 2012
11/20/12 dev version with smaller subscripts
11/20/12 subscripts are too small with <small> tag, revert to <font size='-1'>
11/20/12 use <small> instead of <font size='3'> for subscripts, because <font> is deprecated in HTML4.01 and unsupported in HTML5
11/20/12 fill in {0} in "{0}=# (slope undefined)" with the translated symbol for "x"
11/20/12 move symbol subscripting (x1,y1,...) into code, make subscripts smaller
# 0.00.41 (70308) Nov 14, 2012
11/14/12 fix: represent y=x and y=-x in slope-intercept form in "Point-Slope" tab
11/14/12 change request: "Save line" -> "Save Line", "Erase lines" -> "Erase Lines"
# 0.00.40 (70166) Nov 10, 2012