@@ -1,6 +1,8 @@
 // Copyright 2002-2012, University of Colorado
 package edu.colorado.phet.linegraphing.common.model;
 
+import edu.colorado.phet.common.phetcommon.math.MathUtil;
+
 /**
  * Data structure for a fraction (possibly improper).
  *
@@ -13,5 +15,13 @@ public class Fraction {
     public Fraction( int numerator, int denominator ) {
         this.numerator = numerator;
         this.denominator = denominator;
+    }
+
+    public double toDecimal() {
+        return (double) numerator / (double) denominator;
+    }
+
+    public boolean isInteger() {
+        return MathUtil.isInteger( toDecimal() );
     }
 }
